# x86_os_demo

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  Readmd.md  build.rs  x86.gdb  x86_64qemu.json
.cargo/: config.toml
src/: console.rs  heap.rs  lib.rs  macros.rs  main.rs
src/arch/: mod.rs
src/arch/x86_64/: cpu.rs  gdt.rs  interrupts.rs  memory.rs  mod.rs
src/drivers/: mod.rs
src/drivers/x86_64/: pic.rs  serial.rs
