[package]
edition = "2021"
name = "x86_demo"
version = "0.1.0"

[dependencies]
buddy_system_allocator = "0.8.0"
bitflags = "1.3"
bootloader = { version = "0.9.23", features = ["map_physical_memory"]}
lazy_static = {version = "1.4", features = ["spin_no_std"]}
log = "0.4"
uart_16550 = "0.2"
x86_64 = "0.14.2"
spin = "0.5.2"
pic8259 = "0.10.1"